--- a/r2/r2/templates/usertext.html
+++ b/r2/r2/templates/usertext.html
@@ -119,18 +119,20 @@
         </tr>
         <tr>
             <td>
-                Here is some code:<br/>
+                Lines starting with four spaces <br/>
+                are treated like code:<br/><br/>
                 <span class="spaces">
                     &nbsp;&nbsp;&nbsp;&nbsp;
                 </span>
-                def foo():<br/>
+                if 1 * 2 &lt 3:<br/>
                 <span class="spaces">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 </span>
                 print "hello, world!"<br/>
             </td>
-            <td>Here is come code:<br/>
-                <pre>def foo():<br/>&nbsp;&nbsp;&nbsp;&nbsp;print "hello,
+            <td>Lines starting with four spaces <br/>
+                are treated like code:<br/>
+                <pre>if 1 * 2 &lt 3:<br/>&nbsp;&nbsp;&nbsp;&nbsp;print "hello,
                 world!"</pre>
             </td>
         </tr>
