Fixed problems with comments panel and deleted comments

--- a/r2/r2/templates/usertext.html
+++ b/r2/r2/templates/usertext.html
@@ -49,7 +49,8 @@
 
   %if not thing.creating:
     <div class="usertext-body">
-      ${unsafe(safemarkdown(thing.text, nofollow = thing.nofollow))}
+      ${unsafe(safemarkdown(thing.text, nofollow = thing.nofollow,
+                                        target = thing.target))}
     </div>
   %endif
 
