--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -131,10 +131,16 @@
 </%def>
 
 <%def name="midcol(display=True, cls = '')">
+  %if c.user.pref_compress:
+  <div class="midcol ${cls}" style="width:2ex;" 
+  %else:
   <div class="midcol ${cls}" style="width:$midcolmargin;" 
+  %endif
        ${not display and "style='display:none'" or ''}>
     ${self.arrow(thing, 1, thing.likes)}
-    %if thing.hide_score:
+    %if c.user.pref_compress:
+      <div class="score-placeholder"></div>
+    %elif thing.hide_score:
       <div class="score likes">&bull;</div> 
       <div class="score unvoted">&bull;</div> 
       <div class="score dislikes">&bull;</div> 
@@ -157,13 +163,20 @@
   <% 
     from r2.lib.utils import timeago
     from r2.models import FakeSubreddit
- 
+    from r2.lib.strings import Score
+
     if isinstance(c.site, FakeSubreddit) or c.site != thing.subreddit:
       taglinetext = _("submitted %(when)s ago by %(author)s to %(reddit)s") 
     else:
       taglinetext = _("submitted %(when)s ago by %(author)s") 
     taglinetext = taglinetext.replace(" ", "&#32;")
   %>
+
+  %if c.user.pref_compress and not thing.hide_score:
+    ${self.score(thing, thing.likes, score_fmt = Score.safepoints, tag='span')}
+    &#32;
+  %endif
+
   ${unsafe(taglinetext % dict(reddit = self.subreddit(), 
                               when = thing.timesince, 
                               author= self.author(friend = thing.friend)))}
